adde sections and fake text, titles

--- a/week_2/assignment/index.html
+++ b/week_2/assignment/index.html
@@ -4,5 +4,17 @@
 </head>
 <body>
 	<header>Our Menu</header>
+	<section>
+		<title>chicken</title>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At vitae aut deleniti aliquid dolorum eius error consectetur facilis maiores sint! Aperiam ex, expedita quas dolorem, praesentium quasi obcaecati. Exercitationem, dolor!</p>
+	</section>
+	<section>
+		<title>Beef</title>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nemo quaerat dolorem itaque quod nostrum voluptate, illum, tempore accusamus dolore molestias impedit tempora error veritatis maxime, porro natus saepe dolores!</p>
+	</section>
+	<section>
+		<<title>Suhi</title>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem necessitatibus accusantium eligendi tempora, esse tenetur illo minima repellat iure, quis repudiandae ipsum incidunt? Facilis aut enim id aperiam nostrum soluta!</p>
+	</section>
 </body>
 </html>
