--- a/week_2/assignment/index.html
+++ b/week_2/assignment/index.html
@@ -4,17 +4,19 @@
 </head>
 <body>
 	<header>Our Menu</header>
-	<section>
-		<h2>chicken</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At vitae aut deleniti aliquid dolorum eius error consectetur facilis maiores sint! Aperiam ex, expedita quas dolorem, praesentium quasi obcaecati. Exercitationem, dolor!</p>
-	</section>
-	<section>
-		<h2>Beef</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nemo quaerat dolorem itaque quod nostrum voluptate, illum, tempore accusamus dolore molestias impedit tempora error veritatis maxime, porro natus saepe dolores!</p>
-	</section>
-	<section>
-		<h2>Suhi</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem necessitatibus accusantium eligendi tempora, esse tenetur illo minima repellat iure, quis repudiandae ipsum incidunt? Facilis aut enim id aperiam nostrum soluta!</p>
-	</section>
+	<div class='row'>
+		<section>
+			<h2>Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At vitae aut deleniti aliquid dolorum eius error consectetur facilis maiores sint! Aperiam ex, expedita quas dolorem, praesentium quasi obcaecati. Exercitationem, dolor!</p>
+		</section>
+		<section>
+			<h2>Beef</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nemo quaerat dolorem itaque quod nostrum voluptate, illum, tempore accusamus dolore molestias impedit tempora error veritatis maxime, porro natus saepe dolores!</p>
+		</section>
+		<section>
+			<h2>Suhi</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem necessitatibus accusantium eligendi tempora, esse tenetur illo minima repellat iure, quis repudiandae ipsum incidunt? Facilis aut enim id aperiam nostrum soluta!</p>
+		</section>
+	</div>
 </body>
 </html>
