added link to stylesheet

--- a/week_2/assignment/index.html
+++ b/week_2/assignment/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 	<title>Week 2 assignment</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<header>Our Menu</header>
