--- a/week_2/assignment/index.html
+++ b/week_2/assignment/index.html
@@ -3,7 +3,7 @@
 	<title>Week 2 assignment</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
 	<header>Our Menu</header>
