--- a/week_2/assignment/index.html
+++ b/week_2/assignment/index.html
@@ -8,18 +8,24 @@
 <body>
 	<header>Our Menu</header>
 	<div class='row'>
-		<section class='col-lg-4'>
-			<h2>Chicken</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At vitae aut deleniti aliquid dolorum eius error consectetur facilis maiores sint! Aperiam ex, expedita quas dolorem, praesentium quasi obcaecati. Exercitationem, dolor!</p>
+		<div class='col-lg-4 col-md-6'>
+			<section>
+				<h2 id='title1'>Chicken</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At vitae aut deleniti aliquid dolorum eius error consectetur facilis maiores sint! Aperiam ex, expedita quas dolorem, praesentium quasi obcaecati. Exercitationem, dolor!</p>
+			</section>
+		</div>
+		<div class='col-lg-4 col-md-6'>
+			<section>
+				<h2 id='title2'>Beef</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nemo quaerat dolorem itaque quod nostrum voluptate, illum, tempore accusamus dolore molestias impedit tempora error veritatis maxime, porro natus saepe dolores!</p>
+			</section>
+		</div>
+		<div class='col-lg-4 col-md-12'>
+			<section>
+				<h2 id='title3'>Sushi</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem necessitatibus accusantium eligendi tempora, esse tenetur illo minima repellat iure, quis repudiandae ipsum incidunt? Facilis aut enim id aperiam nostrum soluta!</p>
 		</section>
-		<section class='col-lg-4'>
-			<h2>Beef</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nemo quaerat dolorem itaque quod nostrum voluptate, illum, tempore accusamus dolore molestias impedit tempora error veritatis maxime, porro natus saepe dolores!</p>
-		</section>
-		<section class='col-lg-4'>
-			<h2>Suhi</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem necessitatibus accusantium eligendi tempora, esse tenetur illo minima repellat iure, quis repudiandae ipsum incidunt? Facilis aut enim id aperiam nostrum soluta!</p>
-		</section>
+		</div>
 	</div>
 </body>
 </html>
