--- a/week_3/assignment/index.html
+++ b/week_3/assignment/index.html
@@ -2,9 +2,67 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Assignment Solution for Module 3</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <title>Boostrap Starter Page</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	
+	<header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <!-- <div class="container"> -->
+        <!-- <div class="navbar-header">
+           <a href="index.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img" alt="Logo image"></div>
+          </a> -->
+          <a class="navbar-brand" href="index.html"><h1>Food, LLC</h1></a>
+          
+
+          <!-- <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        <!-- </div> -->
+        
+       <!--  <div id="collapsable-nav" class="collapse navbar-collapse hidden-md hidden-sm hidden-lg">
+           <ul id="nav-list" class="nav navbar-nav navbar-right hidden-md hidden-sm hidden-lg">
+            <li >
+              <a href="menu-categories.html">Sushi</a>
+            </li>
+            <li>
+              <a href="#">Chicken</a>
+            </li>
+            <li>
+              <a href="#">Beef</a>
+            </li> -->
+            <!-- <li id="phone" class="hidden-xs">
+              <a href="tel:410-602-5008">
+                <span>410-602-5008</span></a><div>* We Deliver</div>
+            </li> -->
+         <!--  </ul><!-- #nav-list --> 
+      <!--   </div>.collapse .navbar-collapse  -->
+     <!--  </div>.container -->
+    </nav><!-- #header-nav  -->
+      </header>
+   <div id="main-content" class="container">
+    <h2 id="menu-categories-title" class="text-center">Our Menu</h2>
+  </div>
+	<!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
