--- a/week_3/assignment/index.html
+++ b/week_3/assignment/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#">Food, LLC</a>
         <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
